# ansible

./: .gitignore  README.md  ansible.cfg  pyproject.toml  vault.yml
network/: ansible.cfg
network/inventory/: cisco.ini  hosts.yml  lab.yml
network/inventory/group_vars/all/: vars.yml
network/inventory/group_vars/nxos/: vars.yml
network/inventory/host_vars/: er01.dc01  er02.dc01  lf01.pd01.dc01  lf02.pd01.dc01  oob-rtr01.dc01  oob-swt01.dc01  sp01.pd01.dc01  sp02.pd01.dc01  sp03.pd01.dc01  sp04.pd01.dc01
network/playbooks/: gather-os-version.yml  oob-rtr-config.yml  show-vrfs.yml
servers/: ansible.cfg
servers/inventory/: hosts.yml  servers.ini
servers/inventory/development/: hosts.ini  hosts.yml
servers/inventory/development/group_vars/: dns  lab  shell
servers/inventory/development/group_vars/all/: vars
servers/inventory/development/host_vars/: dns02  dns04
servers/inventory/group_vars/: lab
servers/inventory/group_vars/all/: vars
servers/inventory/host_vars/: centos-lab01  cerebro  dns01  dns03  sprocket
servers/inventory/testing/group_vars/: all.yml  dns.yml  shell.yml
servers/playbooks/: create-ansible-user-playbook.yml  create-ansible-user.yml  facts-os-family.yml  sshd-config-playback.yml  sshd-config-playbook.yml  system-updates-playbook.yml
servers/playbooks/files/: authorized_keys  id_ed25519
